# numpyro_forecast

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  build-timings.json  changelog.html  changelog.md  contributing.html  great-docs.yml  implementation.md  index.html  license.html  llms-full.txt  llms.txt  pyproject.toml  search.json  sitemap.xml  skill.md  skills.html
.github/workflows/: ci.yml  docs.yml  prune-deployments.yml  release.yml
docs/examples/: electricity_forecast.html  electricity_forecast_calibration.html  electricity_forecast_calibration.ipynb  exponential_smoothing_state_space.ipynb  forecasting_univariate.html  forecasting_univariate.ipynb  forecasting_univariate.md  forecasting_univariate.qmd  hierarchical_forecasting_1.html  hierarchical_forecasting_1.qmd  hierarchical_forecasting_2.html  hierarchical_forecasting_2.qmd  index.html  index.md
docs/examples/_notebooks/: forecasting_univariate.ipynb
docs/examples/_src/: electricity_forecast-preview.html  electricity_forecast_calibration-preview.html  electricity_forecast_calibration-preview.md  electricity_forecast_calibration.out.ipynb  forecasting_univariate-preview.html  forecasting_univariate-preview.md  forecasting_univariate.out.ipynb  hierarchical_forecasting_1-preview.html  hierarchical_forecasting_2-preview.html
examples/: forecasting_univariate.ipynb  hierarchical_forecasting.ipynb  hierarchical_forecasting_1.ipynb  hierarchical_forecasting_2.ipynb
numpyro_forecast/: __init__.py  datasets.py  evaluate.py  forecaster.py  functional.py  metrics.py  typing.py  util.py
numpyro_forecast/models/: __init__.py  hierarchical.py  univariate.py
pr-preview/pr-14/: build-timings.json  contributing.md  index.html  skills.html
pr-preview/pr-14/reference/: datasets.load_bart_hierarchical.md  evaluate.eval_mae.html  functional.MCMCFit.md  util.periodic_repeat.html
pr-preview/pr-15/: build-timings.json  contributing.html
pr-preview/pr-15/reference/: evaluate.backtest.md  evaluate.eval_coverage.html  functional.fit_mcmc.html  index.md  util.zero_data_like.md
pr-preview/pr-16/: build-timings.json  llms-full.txt
pr-preview/pr-16/reference/: datasets.bart_available.html  datasets.load_bart_weekly.html  forecaster.ForecastingModel.html  functional.Horizon.md  functional.SVIFit.html  functional.fit_svi.html  functional.fit_svi.md  functional.forecasting_model.html  functional.predict.html  functional.time_series.html  index.html  util.shift_loc.html
pr-preview/pr-17/: build-timings.json  license.html
pr-preview/pr-17/reference/: evaluate.eval_crps.html  forecaster.HMCForecaster.html  functional.draw_posterior.html  util.concat_future.html  util.zero_data_like.html
pr-preview/pr-18/: build-timings.json  changelog.html  skill.md
pr-preview/pr-18/reference/: datasets.load_bart_hierarchical.html  datasets.load_bart_weekly.md  evaluate.BacktestResult.html  evaluate.backtest.html  evaluate.eval_rmse.html  functional.MCMCFit.html  functional.forecast.html  util.periodic_repeat.md  util.prefix_condition.html
pr-preview/pr-19/: build-timings.json  changelog.html  contributing.html  index.html  license.html  llms-full.txt  robots.txt  search.json  sitemap.xml  skills.html
pr-preview/pr-19/reference/: datasets.bart_available.html  datasets.load_bart_hierarchical.html  datasets.load_bart_weekly.html  datasets.load_victoria_electricity.html  evaluate.BacktestResult.html  evaluate.backtest.html  evaluate.eval_coverage.html  evaluate.eval_crps.html  evaluate.eval_mae.html  evaluate.eval_rmse.html  forecaster.Forecaster.html  (+25 more)
pr-preview/pr-20/: build-timings.json  llms-full.txt  search.json
pr-preview/pr-21/: build-timings.json  llms-full.txt  search.json
pr-preview/pr-23/: build-timings.json  llms-full.txt  sitemap.xml
pr-preview/pr-24/: build-timings.json  changelog.md
pr-preview/pr-25/: build-timings.json  changelog.html  contributing.html  index.html  license.html  search.json  sitemap.xml  skill.md  skills.html
pr-preview/pr-27/: build-timings.json  changelog.html  contributing.html  index.html  license.html  search.json  sitemap.xml  skills.html
pr-preview/pr-28/: build-timings.json  contributing.md  skills.html
pr-preview/pr-29/: build-timings.json  contributing.html  index.html  license.html  search.json  sitemap.xml  skills.html
pr-preview/pr-30/: build-timings.json  changelog.md  index.html  search.json
pr-preview/pr-31/: build-timings.json  changelog.html  contributing.html  index.html  license.html  llms-full.txt  search.json  sitemap.xml  skills.html
reference/: datasets.bart_available.html  datasets.load_bart_hierarchical.html  datasets.load_bart_weekly.html  datasets.load_victoria_electricity.html  evaluate.BacktestResult.html  evaluate.BacktestResult.md  evaluate.backtest.html  evaluate.eval_coverage.html  evaluate.eval_coverage.md  evaluate.eval_crps.html  evaluate.eval_mae.html  evaluate.eval_rmse.html  evaluate.evaluate_forecast.html  forecaster.Forecaster.html  forecaster.ForecastingModel.html  forecaster.HMCForecaster.html  functional.Horizon.html  functional.MCMCFit.html  functional.SVIFit.html  functional.draw_posterior.html  functional.fit_mcmc.html  functional.fit_svi.html  functional.forecast.html  functional.forecasting_model.html  functional.forecasting_model.md  functional.predict.html  functional.predict.md  functional.predict_in_sample.html  functional.time_series.html  functional.time_series.md  index.html  index.md  metrics.crps_empirical.html  util.concat_future.html  util.fourier_features.html  util.periodic_repeat.html  util.prefix_condition.html  util.shift_loc.html  util.slice_time.html  util.zero_data_like.html
scripts/: build_docs.py
tests/: conftest.py  example_models.py  test_datasets.py  test_docs_reference.py  test_evaluate.py  test_examples.py  test_forecaster.py  test_functional.py  test_metrics.py  test_package.py  test_util.py
(+381 files in other folders)
